[package]
name = "speedbet-arena"
version = "0.1.0"
edition = "2021"
authors = ["SpeedBet Team"]

[lib]
name = "speedbet_arena"
path = "src/lib.rs"

[[bin]]
name = "speedbet_arena_contract"
path = "src/contract.rs"

[[bin]]
name = "speedbet_arena_service"
path = "src/service.rs"

[dependencies]
linera-sdk = "0.15.8"
linera-views = "0.15.8"
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17"  # Pin to avoid 7.2.1 which needs Rust 1.89
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
futures = "0.3"

[features]
default = []
test = ["linera-sdk/test"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
